v0.0.1/modules/schema/pages/class/UnitInitialConditions.adoc
= `UnitInitialConditions`
:toclevels: 4


+++Resource status at the end of a given clearing period.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:UnitInitialConditions`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`UnitInitialConditions`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
UnitInitialConditions {
  style {
    fill: "#fffbef"
    shadow: true
  }
}







RegisteredGenerator {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






UnitInitialConditions -> RegisteredGenerator: GeneratingUnit


UnitInitialConditions -> DiagramObject: DiagramObjects


UnitInitialConditions -> InstanceSet: InstanceSet


UnitInitialConditions -> Name: Names


UnitInitialConditions -> ChangeSetMember: PropertiesCIMDataObject


UnitInitialConditions -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<GeneratingUnit,`GeneratingUnit`>>
| 0..1
| xref::class/RegisteredGenerator.adoc[`RegisteredGenerator`]
| n/a

| <<cumEnergy,`cumEnergy`>>
| 0..1
| xref::class/RealEnergy.adoc[`RealEnergy`]
| +++Cumulative energy production over trading period.+++

| <<cumStatusChanges,`cumStatusChanges`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Cumulative number of status changes of the resource.+++

| <<numberOfStartups,`numberOfStartups`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of start ups in the Operating Day until the end of previous hour.+++

| <<onlineStatus,`onlineStatus`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++'true' if the GeneratingUnit is currently On-Line+++

| <<resourceMW,`resourceMW`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Resource MW output at the end of previous clearing period.+++

| <<resourceStatus,`resourceStatus`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Resource status at the end of previous clearing period:
0 - off-line
1 - on-line production
2 - in shutdown process
3 - in startup process+++

| <<statusDate,`statusDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Time and date for resourceStatus+++

| <<timeInStatus,`timeInStatus`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Time in market trading intervals the resource is in the state as of the end of the previous clearing period.+++

| <<timeInterval,`timeInterval`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Time interval+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#cumEnergy]
=== `cumEnergy`
+++Cumulative energy production over trading period.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.cumEnergy`
| Cardinality
| 0..1
| Type
| xref::class/RealEnergy.adoc[`RealEnergy`]


|===

//[discrete]
[#cumStatusChanges]
=== `cumStatusChanges`
+++Cumulative number of status changes of the resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.cumStatusChanges`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#GeneratingUnit]
=== `GeneratingUnit`


[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.GeneratingUnit`
| Cardinality
| 0..1
| Type
| xref::class/RegisteredGenerator.adoc[`RegisteredGenerator`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#numberOfStartups]
=== `numberOfStartups`
+++Number of start ups in the Operating Day until the end of previous hour.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.numberOfStartups`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#onlineStatus]
=== `onlineStatus`
+++'true' if the GeneratingUnit is currently On-Line+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.onlineStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#resourceMW]
=== `resourceMW`
+++Resource MW output at the end of previous clearing period.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.resourceMW`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#resourceStatus]
=== `resourceStatus`
+++Resource status at the end of previous clearing period:
0 - off-line
1 - on-line production
2 - in shutdown process
3 - in startup process+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.resourceStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#statusDate]
=== `statusDate`
+++Time and date for resourceStatus+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.statusDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#timeInStatus]
=== `timeInStatus`
+++Time in market trading intervals the resource is in the state as of the end of the previous clearing period.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.timeInStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#timeInterval]
=== `timeInterval`
+++Time interval+++

[cols="h,4",width=65%]
|===
| URI
| `cim:UnitInitialConditions.timeInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


